// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tooltip > should render correctly with component in content prop 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-3 {
  background: #151a2d;
  color: #ffffff;
  border-radius: 0.25rem;
  padding: 0.25rem 0.5rem;
  text-align: center;
  position: absolute;
  max-width: 14.5rem;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  opacity: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, -12px, 0);
  -moz-transform: translate3d(0px, -12px, 0);
  -ms-transform: translate3d(0px, -12px, 0);
  transform: translate3d(0px, -12px, 0);
  padding: 1rem;
  width: 26.25rem;
  max-width: 26.25rem;
  text-align: initial;
  background: #ffffff;
  box-shadow: 0px 4px 32px 8px #151a2d5c;
}

.emotion-3[data-animated="true"] {
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
}

.emotion-3[data-has-arrow="true"]::after {
  content: " ";
  position: absolute;
  top: -1px;
  left: 0px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.emotion-3[data-visible-in-dom="false"] {
  display: none;
}

.emotion-3[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-11:hover,
.emotion-11:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-13 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-13 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":r5:"
      aria-describedby=":r5:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      Children
      <div
        class="emotion-2 emotion-3 emotion-4"
        data-animated="true"
        data-has-arrow="true"
        id=":r5:"
        role="dialog"
        style="opacity: 1;"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <h3
              class="emotion-9 emotion-10"
            >
              Test
            </h3>
            <button
              aria-label="close"
              class="emotion-11 emotion-12"
              type="button"
            >
              <svg
                class="emotion-13 emotion-14"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                />
              </svg>
            </button>
          </div>
          <p>
            Test
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > should render correctly with placement > should renders tooltip with placement bottom 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-3 {
  background: #151a2d;
  color: #ffffff;
  border-radius: 0.25rem;
  padding: 0.25rem 0.5rem;
  text-align: center;
  position: absolute;
  max-width: 14.5rem;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  opacity: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, 12px, 0);
  -moz-transform: translate3d(0px, 12px, 0);
  -ms-transform: translate3d(0px, 12px, 0);
  transform: translate3d(0px, 12px, 0);
  padding: 1rem;
  width: 26.25rem;
  max-width: 26.25rem;
  text-align: initial;
  background: #ffffff;
  box-shadow: 0px 4px 32px 8px #151a2d5c;
}

.emotion-3[data-animated="true"] {
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
}

.emotion-3[data-has-arrow="true"]::after {
  content: " ";
  position: absolute;
  top: -13px;
  left: 0px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.emotion-3[data-visible-in-dom="false"] {
  display: none;
}

.emotion-3[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-11:hover,
.emotion-11:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-13 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-13 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-15 {
  color: #222638;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":rk:"
      aria-describedby=":rk:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
      <div
        class="emotion-2 emotion-3 emotion-4"
        data-animated="true"
        data-has-arrow="true"
        id=":rk:"
        role="dialog"
        style="opacity: 1;"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <h3
              class="emotion-9 emotion-10"
            >
              Test
            </h3>
            <button
              aria-label="close"
              class="emotion-11 emotion-12"
              type="button"
            >
              <svg
                class="emotion-13 emotion-14"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                />
              </svg>
            </button>
          </div>
          <p
            class="emotion-15 emotion-10"
          >
            Test
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > should render correctly with placement > should renders tooltip with placement left 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(-16px, 0px, 0);
    -moz-transform: translate3d(-16px, 0px, 0);
    -ms-transform: translate3d(-16px, 0px, 0);
    transform: translate3d(-16px, 0px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(-16px, 0px, 0);
    -moz-transform: translate3d(-16px, 0px, 0);
    -ms-transform: translate3d(-16px, 0px, 0);
    transform: translate3d(-16px, 0px, 0);
  }
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-3 {
  background: #151a2d;
  color: #ffffff;
  border-radius: 0.25rem;
  padding: 0.25rem 0.5rem;
  text-align: center;
  position: absolute;
  max-width: 14.5rem;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  opacity: 0;
  z-index: 1;
  -webkit-transform: translate3d(-16px, 0px, 0);
  -moz-transform: translate3d(-16px, 0px, 0);
  -ms-transform: translate3d(-16px, 0px, 0);
  transform: translate3d(-16px, 0px, 0);
  padding: 1rem;
  width: 26.25rem;
  max-width: 26.25rem;
  text-align: initial;
  background: #ffffff;
  box-shadow: 0px 4px 32px 8px #151a2d5c;
}

.emotion-3[data-animated="true"] {
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
}

.emotion-3[data-has-arrow="true"]::after {
  content: " ";
  position: absolute;
  top: 0px;
  left: 13px;
  -webkit-transform: translate(-50%, -50%) rotate(-90deg);
  -moz-transform: translate(-50%, -50%) rotate(-90deg);
  -ms-transform: translate(-50%, -50%) rotate(-90deg);
  transform: translate(-50%, -50%) rotate(-90deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.emotion-3[data-visible-in-dom="false"] {
  display: none;
}

.emotion-3[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-11:hover,
.emotion-11:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-13 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-13 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-15 {
  color: #222638;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":rc:"
      aria-describedby=":rc:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
      <div
        class="emotion-2 emotion-3 emotion-4"
        data-animated="true"
        data-has-arrow="true"
        id=":rc:"
        role="dialog"
        style="opacity: 1;"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <h3
              class="emotion-9 emotion-10"
            >
              Test
            </h3>
            <button
              aria-label="close"
              class="emotion-11 emotion-12"
              type="button"
            >
              <svg
                class="emotion-13 emotion-14"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                />
              </svg>
            </button>
          </div>
          <p
            class="emotion-15 emotion-10"
          >
            Test
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > should render correctly with placement > should renders tooltip with placement right 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(16px, 0px, 0);
    -moz-transform: translate3d(16px, 0px, 0);
    -ms-transform: translate3d(16px, 0px, 0);
    transform: translate3d(16px, 0px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(16px, 0px, 0);
    -moz-transform: translate3d(16px, 0px, 0);
    -ms-transform: translate3d(16px, 0px, 0);
    transform: translate3d(16px, 0px, 0);
  }
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-3 {
  background: #151a2d;
  color: #ffffff;
  border-radius: 0.25rem;
  padding: 0.25rem 0.5rem;
  text-align: center;
  position: absolute;
  max-width: 14.5rem;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  opacity: 0;
  z-index: 1;
  -webkit-transform: translate3d(16px, 0px, 0);
  -moz-transform: translate3d(16px, 0px, 0);
  -ms-transform: translate3d(16px, 0px, 0);
  transform: translate3d(16px, 0px, 0);
  padding: 1rem;
  width: 26.25rem;
  max-width: 26.25rem;
  text-align: initial;
  background: #ffffff;
  box-shadow: 0px 4px 32px 8px #151a2d5c;
}

.emotion-3[data-animated="true"] {
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
}

.emotion-3[data-has-arrow="true"]::after {
  content: " ";
  position: absolute;
  top: 0px;
  left: -13px;
  -webkit-transform: translate(50%, -50%) rotate(90deg);
  -moz-transform: translate(50%, -50%) rotate(90deg);
  -ms-transform: translate(50%, -50%) rotate(90deg);
  transform: translate(50%, -50%) rotate(90deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.emotion-3[data-visible-in-dom="false"] {
  display: none;
}

.emotion-3[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-11:hover,
.emotion-11:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-13 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-13 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-15 {
  color: #222638;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":rg:"
      aria-describedby=":rg:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
      <div
        class="emotion-2 emotion-3 emotion-4"
        data-animated="true"
        data-has-arrow="true"
        id=":rg:"
        role="dialog"
        style="opacity: 1;"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <h3
              class="emotion-9 emotion-10"
            >
              Test
            </h3>
            <button
              aria-label="close"
              class="emotion-11 emotion-12"
              type="button"
            >
              <svg
                class="emotion-13 emotion-14"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                />
              </svg>
            </button>
          </div>
          <p
            class="emotion-15 emotion-10"
          >
            Test
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > should render correctly with placement > should renders tooltip with placement top 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-3 {
  background: #151a2d;
  color: #ffffff;
  border-radius: 0.25rem;
  padding: 0.25rem 0.5rem;
  text-align: center;
  position: absolute;
  max-width: 14.5rem;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  opacity: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, -12px, 0);
  -moz-transform: translate3d(0px, -12px, 0);
  -ms-transform: translate3d(0px, -12px, 0);
  transform: translate3d(0px, -12px, 0);
  padding: 1rem;
  width: 26.25rem;
  max-width: 26.25rem;
  text-align: initial;
  background: #ffffff;
  box-shadow: 0px 4px 32px 8px #151a2d5c;
}

.emotion-3[data-animated="true"] {
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
}

.emotion-3[data-has-arrow="true"]::after {
  content: " ";
  position: absolute;
  top: -1px;
  left: 0px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.emotion-3[data-visible-in-dom="false"] {
  display: none;
}

.emotion-3[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-11:hover,
.emotion-11:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-13 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-13 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-15 {
  color: #222638;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":r8:"
      aria-describedby=":r8:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
      <div
        class="emotion-2 emotion-3 emotion-4"
        data-animated="true"
        data-has-arrow="true"
        id=":r8:"
        role="dialog"
        style="opacity: 1;"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <h3
              class="emotion-9 emotion-10"
            >
              Test
            </h3>
            <button
              aria-label="close"
              class="emotion-11 emotion-12"
              type="button"
            >
              <svg
                class="emotion-13 emotion-14"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                />
              </svg>
            </button>
          </div>
          <p
            class="emotion-15 emotion-10"
          >
            Test
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > should render correctly with required props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":r0:"
      aria-describedby=":r0:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      Children
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > should render correctly with required props and visible 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-3 {
  background: #151a2d;
  color: #ffffff;
  border-radius: 0.25rem;
  padding: 0.25rem 0.5rem;
  text-align: center;
  position: absolute;
  max-width: 14.5rem;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  opacity: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, -12px, 0);
  -moz-transform: translate3d(0px, -12px, 0);
  -ms-transform: translate3d(0px, -12px, 0);
  transform: translate3d(0px, -12px, 0);
  padding: 1rem;
  width: 26.25rem;
  max-width: 26.25rem;
  text-align: initial;
  background: #ffffff;
  box-shadow: 0px 4px 32px 8px #151a2d5c;
}

.emotion-3[data-animated="true"] {
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
}

.emotion-3[data-has-arrow="true"]::after {
  content: " ";
  position: absolute;
  top: -1px;
  left: 0px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.emotion-3[data-visible-in-dom="false"] {
  display: none;
}

.emotion-3[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-11:hover,
.emotion-11:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-13 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-13 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-15 {
  color: #222638;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":r1:"
      aria-describedby=":r1:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      Children
      <div
        class="emotion-2 emotion-3 emotion-4"
        data-animated="true"
        data-has-arrow="true"
        id=":r1:"
        role="dialog"
        style="opacity: 1;"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <h3
              class="emotion-9 emotion-10"
            >
              Test
            </h3>
            <button
              aria-label="close"
              class="emotion-11 emotion-12"
              type="button"
            >
              <svg
                class="emotion-13 emotion-14"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                />
              </svg>
            </button>
          </div>
          <p
            class="emotion-15 emotion-10"
          >
            Test
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > should render correctly with sentiment > should renders tooltip with placement neutral 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-3 {
  background: #151a2d;
  color: #ffffff;
  border-radius: 0.25rem;
  padding: 0.25rem 0.5rem;
  text-align: center;
  position: absolute;
  max-width: 14.5rem;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  opacity: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, -12px, 0);
  -moz-transform: translate3d(0px, -12px, 0);
  -ms-transform: translate3d(0px, -12px, 0);
  transform: translate3d(0px, -12px, 0);
  padding: 1rem;
  width: 26.25rem;
  max-width: 26.25rem;
  text-align: initial;
  background: #ffffff;
  box-shadow: 0px 4px 32px 8px #151a2d5c;
}

.emotion-3[data-animated="true"] {
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
}

.emotion-3[data-has-arrow="true"]::after {
  content: " ";
  position: absolute;
  top: -1px;
  left: 0px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.emotion-3[data-visible-in-dom="false"] {
  display: none;
}

.emotion-3[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-11:hover,
.emotion-11:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-13 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-13 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-15 {
  color: #222638;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":ro:"
      aria-describedby=":ro:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
      <div
        class="emotion-2 emotion-3 emotion-4"
        data-animated="true"
        data-has-arrow="true"
        id=":ro:"
        role="dialog"
        style="opacity: 1;"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <h3
              class="emotion-9 emotion-10"
            >
              Test
            </h3>
            <button
              aria-label="close"
              class="emotion-11 emotion-12"
              type="button"
            >
              <svg
                class="emotion-13 emotion-14"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                />
              </svg>
            </button>
          </div>
          <p
            class="emotion-15 emotion-10"
          >
            Test
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > should render correctly with sentiment > should renders tooltip with placement primary 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-3 {
  background: #151a2d;
  color: #ffffff;
  border-radius: 0.25rem;
  padding: 0.25rem 0.5rem;
  text-align: center;
  position: absolute;
  max-width: 14.5rem;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  opacity: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, -12px, 0);
  -moz-transform: translate3d(0px, -12px, 0);
  -ms-transform: translate3d(0px, -12px, 0);
  transform: translate3d(0px, -12px, 0);
  padding: 1rem;
  width: 26.25rem;
  max-width: 26.25rem;
  text-align: initial;
  background: #8c40ef;
  box-shadow: 0px 4px 32px 8px #151a2d5c;
}

.emotion-3[data-animated="true"] {
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
}

.emotion-3[data-has-arrow="true"]::after {
  content: " ";
  position: absolute;
  top: -1px;
  left: 0px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.emotion-3[data-visible-in-dom="false"] {
  display: none;
}

.emotion-3[data-has-arrow='true']::after {
  border-color: #8c40ef transparent transparent transparent;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  color: #ffffff;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-11:hover,
.emotion-11:active {
  background: #792dd4;
  color: #f9f9fa;
}

.emotion-13 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-13 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-15 {
  color: #ffffff;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":rs:"
      aria-describedby=":rs:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
      <div
        class="emotion-2 emotion-3 emotion-4"
        data-animated="true"
        data-has-arrow="true"
        id=":rs:"
        role="dialog"
        style="opacity: 1;"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <h3
              class="emotion-9 emotion-10"
            >
              Test
            </h3>
            <button
              aria-label="close"
              class="emotion-11 emotion-12"
              type="button"
            >
              <svg
                class="emotion-13 emotion-14"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                />
              </svg>
            </button>
          </div>
          <p
            class="emotion-15 emotion-10"
          >
            Test
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > should render correctly with sizes > should renders tooltip with placement large 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-3 {
  background: #151a2d;
  color: #ffffff;
  border-radius: 0.25rem;
  padding: 0.25rem 0.5rem;
  text-align: center;
  position: absolute;
  max-width: 14.5rem;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  opacity: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, -12px, 0);
  -moz-transform: translate3d(0px, -12px, 0);
  -ms-transform: translate3d(0px, -12px, 0);
  transform: translate3d(0px, -12px, 0);
  padding: 1rem;
  width: 32.5rem;
  max-width: 32.5rem;
  text-align: initial;
  background: #ffffff;
  box-shadow: 0px 4px 32px 8px #151a2d5c;
}

.emotion-3[data-animated="true"] {
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
}

.emotion-3[data-has-arrow="true"]::after {
  content: " ";
  position: absolute;
  top: -1px;
  left: 0px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.emotion-3[data-visible-in-dom="false"] {
  display: none;
}

.emotion-3[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-11:hover,
.emotion-11:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-11:hover,
.emotion-11:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-13 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-13 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-13 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-13 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-15 {
  color: #222638;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15 {
  color: #222638;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":r18:"
      aria-describedby=":r18:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
      <div
        class="emotion-2 emotion-3 emotion-4"
        data-animated="true"
        data-has-arrow="true"
        id=":r18:"
        role="dialog"
        style="opacity: 1;"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <h3
              class="emotion-9 emotion-10"
            >
              Test
            </h3>
            <button
              aria-label="close"
              class="emotion-11 emotion-12"
              type="button"
            >
              <svg
                class="emotion-13 emotion-14"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                />
              </svg>
            </button>
          </div>
          <p
            class="emotion-15 emotion-10"
          >
            Test
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > should render correctly with sizes > should renders tooltip with placement medium 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-3 {
  background: #151a2d;
  color: #ffffff;
  border-radius: 0.25rem;
  padding: 0.25rem 0.5rem;
  text-align: center;
  position: absolute;
  max-width: 14.5rem;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  opacity: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, -12px, 0);
  -moz-transform: translate3d(0px, -12px, 0);
  -ms-transform: translate3d(0px, -12px, 0);
  transform: translate3d(0px, -12px, 0);
  padding: 1rem;
  width: 26.25rem;
  max-width: 26.25rem;
  text-align: initial;
  background: #ffffff;
  box-shadow: 0px 4px 32px 8px #151a2d5c;
}

.emotion-3[data-animated="true"] {
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
}

.emotion-3[data-has-arrow="true"]::after {
  content: " ";
  position: absolute;
  top: -1px;
  left: 0px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.emotion-3[data-visible-in-dom="false"] {
  display: none;
}

.emotion-3[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.emotion-3 {
  background: #151a2d;
  color: #ffffff;
  border-radius: 0.25rem;
  padding: 0.25rem 0.5rem;
  text-align: center;
  position: absolute;
  max-width: 14.5rem;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  opacity: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, -12px, 0);
  -moz-transform: translate3d(0px, -12px, 0);
  -ms-transform: translate3d(0px, -12px, 0);
  transform: translate3d(0px, -12px, 0);
  padding: 1rem;
  width: 26.25rem;
  max-width: 26.25rem;
  text-align: initial;
  background: #ffffff;
  box-shadow: 0px 4px 32px 8px #151a2d5c;
}

.emotion-3[data-animated="true"] {
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
}

.emotion-3[data-has-arrow="true"]::after {
  content: " ";
  position: absolute;
  top: -1px;
  left: 0px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.emotion-3[data-visible-in-dom="false"] {
  display: none;
}

.emotion-3[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-11:hover,
.emotion-11:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-11:hover,
.emotion-11:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-13 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-13 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-13 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-13 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-15 {
  color: #222638;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15 {
  color: #222638;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":r14:"
      aria-describedby=":r14:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
      <div
        class="emotion-2 emotion-3 emotion-4"
        data-animated="true"
        data-has-arrow="true"
        id=":r14:"
        role="dialog"
        style="opacity: 1;"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <h3
              class="emotion-9 emotion-10"
            >
              Test
            </h3>
            <button
              aria-label="close"
              class="emotion-11 emotion-12"
              type="button"
            >
              <svg
                class="emotion-13 emotion-14"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                />
              </svg>
            </button>
          </div>
          <p
            class="emotion-15 emotion-10"
          >
            Test
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > should render correctly with sizes > should renders tooltip with placement small 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-3 {
  background: #151a2d;
  color: #ffffff;
  border-radius: 0.25rem;
  padding: 0.25rem 0.5rem;
  text-align: center;
  position: absolute;
  max-width: 14.5rem;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  opacity: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, -12px, 0);
  -moz-transform: translate3d(0px, -12px, 0);
  -ms-transform: translate3d(0px, -12px, 0);
  transform: translate3d(0px, -12px, 0);
  padding: 1rem;
  width: 20rem;
  max-width: 20rem;
  text-align: initial;
  background: #ffffff;
  box-shadow: 0px 4px 32px 8px #151a2d5c;
}

.emotion-3[data-animated="true"] {
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
}

.emotion-3[data-has-arrow="true"]::after {
  content: " ";
  position: absolute;
  top: -1px;
  left: 0px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.emotion-3[data-visible-in-dom="false"] {
  display: none;
}

.emotion-3[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-11:hover,
.emotion-11:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-11:hover,
.emotion-11:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-13 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-13 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-13 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-13 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-15 {
  color: #222638;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15 {
  color: #222638;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls=":r10:"
      aria-describedby=":r10:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
      <div
        class="emotion-2 emotion-3 emotion-4"
        data-animated="true"
        data-has-arrow="true"
        id=":r10:"
        role="dialog"
        style="opacity: 1;"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <h3
              class="emotion-9 emotion-10"
            >
              Test
            </h3>
            <button
              aria-label="close"
              class="emotion-11 emotion-12"
              type="button"
            >
              <svg
                class="emotion-13 emotion-14"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                />
              </svg>
            </button>
          </div>
          <p
            class="emotion-15 emotion-10"
          >
            Test
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
